<resources>
    <string name="app_name">Movie App</string>
    <string name="directed_by">DIRECTED BY</string>
    <string name="trailerButton">TRAILER</string>
    <string name="members">Members</string>
    <string name="ratings">RATINGS</string>
    <string name="reviews">Reviews</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="settings">Settings</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="mins">mins</string>
    <string name="show_more">Show more</string>
    <string name="search_hinttext">Search....</string>
    <string name="crew">CREW</string>
    <string name="cast">CAST</string>
    <string name="similar_movies">Similar Movies</string>
    <string name="bookmark">Bookmark</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="no_bookmarks_yet">No bookmarks yet!!</string>
    <string name="logout">Logout</string>
    <string name="default_web_client_id">51508480623-48oj0kv90oqfja3o5glrvm7vq9o416cq.apps.googleusercontent.com</string>
    <string name="type_your_message_here">Type your message here</string>
    <string name="movie_chatbot">Movie Chatbot</string>
    <string name="share">Share</string>
    <string name="more">More</string>
</resources>